# plantrainAI

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_V3.md  FIX_STRATEGY_ERROR_REPORT.md  PHASE1_INDICATOR_EXPORT_SPEC.md  PROJECT_MASTER_PLAN.md  PROJECT_REVIEW_2025_11_24.md  README.md  STRATEGY_V1_LOGIC.md  WORKFLOW_VISUALIZATION.md  add_output_fields.py  analyze_signal_clustering.py  backtest_results_full.json  backtest_v2.py  backtest_v3.py  chart_module14_choch.py  chart_module14_zigzag_legs.py  check_choch_naming.py  check_data_fields.py  check_leg1.py  check_leg_data.py  count_fvg.py  debug_after_fix.py  debug_internals.py  debug_pipeline.py  debug_pullback.py  debug_strategy.py  debug_waves.py  deepseek_enhanced_GC 12-25_M1_20250905.jsonl  demo_module14.py  inspect_data_fields.py  module14_results.json  module15_m5_results.json  pyproject.toml  rr_ratio_comparison.json  run_full_backtest_original.py  strategy_v1_real_signals.json  test_colors.py  test_end_to_end.py  test_full_pipeline.py  (+15 more)
data_backtesst/: deepseek_enhanced_GC 12-25_M1_20250924.jsonl  deepseek_enhanced_GC 12-25_M1_20251016.jsonl  deepseek_enhanced_GC 12-25_M1_20251024.jsonl
debug_scripts/: README.md  check_module14_fields.py  debug_leg_index.py  debug_m5_events.py  debug_module15_swing.py  test_wave_strength.py  verify_m5_logic.py  verify_new_fields.py
docs/: 01_LAYER1_EXPORTER.md  02_LAYER2_LABEL_RULES.md  03_LAYER3_TRAIN_LOOP.md  04_LAYER4_DEPLOY_INFER.md  05_PROJECT_ARCHITECTURE_V3.md  BACKTEST_RETEST_NOTES.md  BACKTEST_VALIDATION_PROCESS.md  CTX_V3_Schema.md  LABEL_RULES.md  LAYER1_EXPORTER.md  LAYER2_Label_Rules_v1.md  LAYER3_TRAIN_LOOP.md  LAYER4_DEPLOY_INFER.md  MODULE_DEPENDENCIES_MATRIX.md  MODULE_FIX01_OB_QUALITY.md  MODULE_FIX02_FVG_QUALITY.md  MODULE_FIX03_STRUCTURE_CONTEXT.md  MODULE_FIX04_CONFLUENCE.md  MODULE_FIX05_STOP_PLACEMENT.md  MODULE_FIX06_TARGET_PLACEMENT.md  MODULE_FIX07_MARKET_CONDITION.md  MODULE_FIX08_VOLUME_DIVERGENCE.md  MODULE_FIX09_VOLUME_PROFILE.md  MODULE_FIX10_MTF_ALIGNMENT.md  MODULE_FIX11_LIQUIDITY_MAP.md  MODULE_FIX12_FVG_RETEST.md  MODULE_FIX14_MGANN_SWING.md  NINJA_EXPORT_CHECKLIST.md  Project_Architecture_v3.md  SMC_Strategy_Long_v1.md  SMC_Strategy_Short_v1.md  VIS_PY_DOCUMENTATION.md
indicators/: SMCDeepSeekExporter_Enhanced.cs  Volumdelta.cs  (+1 more)
(+87 files in other folders)
